// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload component renders correctly 1`] = `
<div
  class="file"
  data-testid="test-file"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root file-display"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4l6 6v10c0 1.1-.9 2-2 2H7.99C6.89 23 6 22.1 6 21l.01-14c0-1.1.89-2 1.99-2h7zm-1 7h5.5L14 6.5V12z"
    />
  </svg>
  <div
    class="file-info-wrapper"
  >
    <p
      class="MuiTypography-root filename Typography MuiTypography-body1"
    >
      something
    </p>
    <p
      class="MuiTypography-root file-size Typography MuiTypography-body1"
    >
      0KB
    </p>
  </div>
  <button
    aria-label="Remove file"
    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-11 iconButtonStyles-medium-17 iconButtonStyles-text-13 delete-icon"
    data-testid="file-delete"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Upload component renders correctly with error 1`] = `
<div
  class="file"
  data-testid="test-file"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root file-display"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
    />
  </svg>
  <div
    class="file-info-wrapper"
  >
    <p
      class="MuiTypography-root filename Typography MuiTypography-body1"
    >
      something
    </p>
    <p
      class="MuiTypography-root error Typography MuiTypography-body1"
    >
      Upload failed
    </p>
  </div>
  <button
    aria-label="Remove file"
    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-49 iconButtonStyles-medium-55 iconButtonStyles-text-51 delete-icon"
    data-testid="file-delete"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Upload component renders correctly with large file size 1`] = `
<div
  class="file"
  data-testid="test-file"
>
  <img
    alt="something"
    class="file-display"
    src="url"
  />
  <div
    class="file-info-wrapper"
  >
    <p
      class="MuiTypography-root filename Typography MuiTypography-body1"
    >
      something
    </p>
    <p
      class="MuiTypography-root file-size Typography MuiTypography-body1"
    >
      12345.6MB
    </p>
  </div>
  <button
    aria-label="Remove file"
    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-30 iconButtonStyles-medium-36 iconButtonStyles-text-32 delete-icon"
    data-testid="file-delete"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
